--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="https://img.icons8.com/plumpy/24/000000/save.png" />
+    <link rel="apple-touch-icon" href="https://img.icons8.com/plumpy/24/000000/save.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="Pocket Programmers"
       content="A Collectible Trading Cards Application Based on Programmers"
     />
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <title>Pocket Programmers</title>
   </head>
   <body>
